2011-06-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Fixed a bug with eof_of_tape not always being set to 1 when it
  should be, f.e. after a call to CASSETTE_Seek(). When the SIO patch was
  enabled and the tape was Seek'ed past the last block, this could result in
  a call to CASSETTE_IOLineStatus() while CASSETTE_current_block was higher
  than CASSETTE_max_block. This in turn would cause division by 0 (due to
  reading an uninitialilsed value from cassette_baudblock).
  Now eof_of_tape is set properly after every change of either
  CASSETTE_current_block or CASSETTE_max_block, so a dangerous call to
  CASSETTE_IOLineStatus doesn't happen anymore.

* cartridge.c: Fixed a bug introduced in rev. 1.48: CARTRIDGE_StateRead would
  try to read the cartridge's bank state even if the cartridge was not
  present; thus the whole state reading would fail.

* afile.c: Support selecting cartridge type when loading a cartridge by Alt+R.


2011-06-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fixed a segfault when opening the "Fullscreen resolution" submenu.
  This was caused by the change in ui.h on 06-20. (reported by Krzysztof
  Karkosza)


2011-06-20  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fixed a bug with F10 creating interlaced screenshots instead of
  non-interlaced.

* cartridge.[ch], ui.c, atari800.man, DOC/USAGE: Ported from Atari800WinPLus -
  an option for enabling/disabling automatic reboot when the cartridge is
  inserted or removed. (Only applies to the main cartridge. After inserting or
  removing a piggyback cartridge, it works as earlier - ie. the system will
  not reboot automatically.)
  
* ui.h, ui_basic.c: Reworked detection of menu end (UI_MENU_END). The
  previous solution stopped working correctly since in the CartManagement menu
  there are hidden menuitems with the "item" field set to NULL which would be
  incorrectly detected as end of menu.


2011-06-17  Tomasz Krasuski  <kr0tki@poczta.onet.pl>